# Caronkey-OS

./: Cargo.toml  README.md  rustup-toolchain
.cargo/: config
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: bump.rs  linked_list.rs  merged_linked_list.rs  merged_list.rs
tests/: heap_allocation.rs  stack_overflow.rs
