[package]
name = "caronkey-os"
version = "0.1.0"
authors = ["panguangze <guangzep@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = {version = "0.8.0", features = ["map_physical_memory"]}
#原子性支持
volatile = "0.2.3"
#锁支持
spin = "0.4.9"
#GDT、IDT、TSS支持
x86_64 = "0.8.1"
#串口支持
uart_16550 = "0.2.0"
#pic支持
pic8259_simple = "0.1.1"
#键盘映射支持
pc-keyboard = "0.3.1"
#内存分配器
linked_list_allocator = "0.6.4"

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 配置qemu退出
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "stack_overflow"
harness = false